@@ -8,6 +8,7 @@ import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.layout.*;
 import javafx.stage.Stage;
+
 import model_entity.Product;
 import model_entity.User;
 import view.EditProfile;
@@ -16,20 +17,22 @@ import controller.CustomerController;
 import controller.AuthController;
 
 public class CustomerDashboard extends Application {
-    
+
     private Label balanceLabel;
     private ProductController productController;
     private CustomerController customerController;
     private AuthController authController;
+
     private String currentCustomerId;
     private String currentCustomerName;
-    
+
     private TableView<Product> productTable;
     private TextField searchField;
 
     public void start(Stage primaryStage, String customerId, String customerName) {
         this.currentCustomerId = customerId;
         this.currentCustomerName = customerName;
+
         this.productController = ProductController.getInstance();
         this.customerController = new CustomerController();
         this.authController = new AuthController();
@@ -37,131 +40,119 @@ public class CustomerDashboard extends Application {
         initializeUI();
         setupLayout(primaryStage);
         loadProducts();
+        updateBalance();
     }
-    
-    // Override untuk compatibility
+
     @Override
     public void start(Stage primaryStage) {
-        this.currentCustomerId = "GUEST";
-        this.currentCustomerName = "Guest";
-        start(primaryStage, currentCustomerId, currentCustomerName);
+        start(primaryStage, "GUEST", "Guest");
     }
-    
+
     private void initializeUI() {
         productTable = new TableView<>();
         setupProductTable();
-        
+
         searchField = new TextField();
         searchField.setPromptText("Search products...");
         searchField.setMinWidth(200);
     }
-    
+
     private void setupProductTable() {
-        // ID Column
         TableColumn<Product, String> idCol = new TableColumn<>("ID");
-        idCol.setCellValueFactory(cellData -> {
-            String id = cellData.getValue().getIdProduct();
-            return new javafx.beans.property.SimpleStringProperty(id);
-        });
-        idCol.setMinWidth(80);
-        
-        // Name Column
+        idCol.setCellValueFactory(c ->
+            new javafx.beans.property.SimpleStringProperty(c.getValue().getIdProduct())
+        );
+
         TableColumn<Product, String> nameCol = new TableColumn<>("Name");
-        nameCol.setCellValueFactory(cellData -> {
-            String name = cellData.getValue().getName();
-            return new javafx.beans.property.SimpleStringProperty(name);
-        });
-        nameCol.setMinWidth(150);
-        
-        // Category Column
+        nameCol.setCellValueFactory(c ->
+            new javafx.beans.property.SimpleStringProperty(c.getValue().getName())
+        );
+
         TableColumn<Product, String> catCol = new TableColumn<>("Category");
-        catCol.setCellValueFactory(cellData -> {
-            String category = cellData.getValue().getCategory();
-            return new javafx.beans.property.SimpleStringProperty(category);
-        });
-        catCol.setMinWidth(100);
-        
-        // Price Column
+        catCol.setCellValueFactory(c ->
+            new javafx.beans.property.SimpleStringProperty(c.getValue().getCategory())
+        );
+
         TableColumn<Product, String> priceCol = new TableColumn<>("Price");
-        priceCol.setCellValueFactory(cellData -> 
+        priceCol.setCellValueFactory(c ->
             new javafx.beans.property.SimpleStringProperty(
-                String.format("Rp%,.0f", cellData.getValue().getPrice())));
-        priceCol.setMinWidth(100);
-        
-        // Stock Column
+                String.format("Rp%,.0f", c.getValue().getPrice())
+            )
+        );
+
         TableColumn<Product, String> stockCol = new TableColumn<>("Stock");
-        stockCol.setCellValueFactory(cellData -> 
+        stockCol.setCellValueFactory(c ->
             new javafx.beans.property.SimpleStringProperty(
-                String.valueOf(cellData.getValue().getStock())));
-        stockCol.setMinWidth(80);
-        
-        // Add to Cart Column
+                String.valueOf(c.getValue().getStock())
+            )
+        );
+
         TableColumn<Product, Void> actionCol = new TableColumn<>("Action");
-        actionCol.setMinWidth(120);
-        actionCol.setCellFactory(param -> new TableCell<Product, Void>() {
+        actionCol.setCellFactory(param -> new TableCell<>() {
             private final Button addBtn = new Button("Add to Cart");
-            
+
             {
                 addBtn.setStyle("-fx-background-color: #388e3c; -fx-text-fill: white;");
-                addBtn.setOnAction(event -> {
-                    Product product = getTableView().getItems().get(getIndex());
-                    showAddToCartDialog(product);
+                addBtn.setOnAction(e -> {
+                    Product p = getTableView().getItems().get(getIndex());
+                    showAddToCartDialog(p);
                 });
             }
-            
+
             @Override
             protected void updateItem(Void item, boolean empty) {
                 super.updateItem(item, empty);
                 if (empty) {
                     setGraphic(null);
                 } else {
-                    Product product = getTableView().getItems().get(getIndex());
-                    addBtn.setDisable(product.getStock() <= 0);
+                    Product p = getTableView().getItems().get(getIndex());
+                    addBtn.setDisable(p.getStock() <= 0);
                     setGraphic(addBtn);
                 }
             }
         });
-        
-        productTable.getColumns().addAll(idCol, nameCol, catCol, priceCol, stockCol, actionCol);
+
+        productTable.getColumns().addAll(
+            idCol, nameCol, catCol, priceCol, stockCol, actionCol
+        );
         productTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
     }
-    
+
     private void setupLayout(Stage stage) {
-        stage.setTitle("Product Catalog - " + currentCustomerName);
-        
-        // Top toolbar
+        stage.setTitle("Customer Dashboard - " + currentCustomerName);
+
         Button refreshBtn = new Button("Refresh");
-        refreshBtn.setOnAction(e -> loadProducts());
-        
+        refreshBtn.setOnAction(e -> {
+            loadProducts();
+            updateBalance();
+        });
+
         Button cartBtn = new Button("View Cart");
         cartBtn.setStyle("-fx-background-color: #1976d2; -fx-text-fill: white;");
         cartBtn.setOnAction(e -> showCartView());
-        
+
         Button topUpBtn = new Button("Top Up");
         topUpBtn.setStyle("-fx-background-color: #4caf50; -fx-text-fill: white;");
         topUpBtn.setOnAction(e -> showTopUp());
-        
+
         Button editProfileBtn = new Button("Edit Profile");
         editProfileBtn.setStyle("-fx-background-color: #ff9800; -fx-text-fill: white;");
         editProfileBtn.setOnAction(e -> showEditProfile());
-        
+
         balanceLabel = new Label();
-        updateBalance();
-        
-        HBox toolbar = new HBox(10);
+
+        HBox toolbar = new HBox(10,
+            balanceLabel, searchField, refreshBtn, cartBtn, topUpBtn, editProfileBtn
+        );
         toolbar.setPadding(new Insets(10));
-        toolbar.getChildren().addAll(balanceLabel, searchField, refreshBtn, cartBtn, topUpBtn, editProfileBtn);
-        
-        // Main layout
-        VBox root = new VBox(10);
+
+        VBox root = new VBox(10, toolbar, productTable);
         root.setPadding(new Insets(15));
-        root.getChildren().addAll(toolbar, productTable);
-        
-        Scene scene = new Scene(root, 850, 500);
-        stage.setScene(scene);
+
+        stage.setScene(new Scene(root, 850, 500));
         stage.show();
     }
-    
+
     private void updateBalance() {
         try {
             double balance = customerController.getCustomerBalance(currentCustomerId);
@@ -171,72 +162,74 @@ public class CustomerDashboard extends Application {
         }
     }
 
-    private void showTopUp() {
-        TopUpBalance topUpView = new TopUpBalance(currentCustomerId);
-        topUpView.show();
-        updateBalance();
-    }
-    
     private void loadProducts() {
         ObservableList<Product> products = FXCollections.observableArrayList(
             productController.getAllProducts()
         );
         productTable.setItems(products);
-        
-        // Search functionality
-        searchField.textProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null || newValue.trim().isEmpty()) {
+
+        searchField.textProperty().addListener((obs, oldV, newV) -> {
+            if (newV == null || newV.isBlank()) {
                 productTable.setItems(products);
             } else {
-                ObservableList<Product> filtered = FXCollections.observableArrayList(
-                    productController.searchProducts(newValue.trim())
+                productTable.setItems(
+                    FXCollections.observableArrayList(
+                        productController.searchProducts(newV)
+                    )
                 );
-                productTable.setItems(filtered);
             }
         });
     }
-    
+
     private void showAddToCartDialog(Product product) {
-        AddToCartView addView = new AddToCartView(
+        AddToCartView view = new AddToCartView(
             currentCustomerId,
             product.getIdProduct(),
             product.getName(),
             product.getStock()
         );
-        addView.show();
+        view.showAndWait();
+        loadProducts();
     }
-    
+
     private void showCartView() {
-        CartView cartView = new CartView(currentCustomerId);
+        CartView cartView = new CartView(
+            currentCustomerId,
+            () -> {
+                updateBalance();
+                loadProducts();
+            }
+        );
         cartView.show();
     }
-    
+
+    private void showTopUp() {
+        TopUpBalance topUp = new TopUpBalance(currentCustomerId);
+        topUp.showAndWait();
+        updateBalance();
+    }
+
     private void showEditProfile() {
         try {
             User user = authController.getUserById(currentCustomerId);
-            
             if (user == null) {
                 showAlert("Error", "User not found");
                 return;
             }
-            
-            EditProfile editProfile = new EditProfile(user);
-            editProfile.show();
-            
+            new EditProfile(user).show();
         } catch (Exception e) {
-            e.printStackTrace();
-            showAlert("Error", "Cannot open Edit Profile: " + e.getMessage());
+            showAlert("Error", e.getMessage());
         }
     }
-    
-    private void showAlert(String title, String message) {
-        Alert alert = new Alert(Alert.AlertType.ERROR);
-        alert.setTitle(title);
-        alert.setHeaderText(null);
-        alert.setContentText(message);
-        alert.showAndWait();
+
+    private void showAlert(String title, String msg) {
+        Alert a = new Alert(Alert.AlertType.ERROR);
+        a.setTitle(title);
+        a.setHeaderText(null);
+        a.setContentText(msg);
+        a.showAndWait();
     }
-    
+
     public static void main(String[] args) {
         launch(args);
     }
